fixed errors except translate function